--- a/lvtn/src/Page/Home/home.module.css
+++ b/lvtn/src/Page/Home/home.module.css
@@ -5,8 +5,9 @@
     flex-direction: column;
     cursor: pointer;
     border: 0.5px solid #eee;
-    /* border-radius: 5px; */
     padding: 30px 0;
+    text-align: center;
+    height: 190px;
 }
 
 .categoryItem:hover {
@@ -17,4 +18,7 @@
 }
 .img {
     width: 84px;
+}
+.name {
+    height: 40px;
 }
