--- a/lvtn/src/Page/CreatePost/createpost.module.css
+++ b/lvtn/src/Page/CreatePost/createpost.module.css
@@ -200,6 +200,7 @@
     /* position: absolute;
     right: 20px; */
     text-align: right;
+    margin-top: 50px;
 }
 .button {
     font-size: 1rem;
