--- a/lvtn/src/Page/CreatePost/createpost.module.css
+++ b/lvtn/src/Page/CreatePost/createpost.module.css
@@ -41,6 +41,7 @@
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    margin-top: 20px;
 }
 .imageItem {
     position: relative;
