--- a/lvtn/src/Base/Header/Components/AutoComplete/autocomplete.module.css
+++ b/lvtn/src/Base/Header/Components/AutoComplete/autocomplete.module.css
@@ -1,8 +1,10 @@
 .autoComplete {
     width: 100%;
+    max-height: 200px;
+    overflow-y: auto;
     background-color: #fff;
     position: absolute;
-    top: 40px;
+    top: 50px;
     box-shadow: 0 0 5px 0 rgb(0 0 0 / 10%);
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
@@ -18,6 +20,8 @@
     color: #333;
     transition: all 0.2s linear;
     cursor: pointer;
+    font-size: 14px;
+    font-weight: 500;
 }
 
 .item:hover {
