--- a/lvtn/src/Common/ListPost/Post/post.module.css
+++ b/lvtn/src/Common/ListPost/Post/post.module.css
@@ -48,6 +48,7 @@
 .moreInfo {
     display: flex;
     align-items: center;
+    flex-wrap: wrap;
     margin-top: 10px;
     font-size: 12px;
     color: #9b9b9b;
