--- a/lvtn/src/Common/ListPost/Post/post.module.css
+++ b/lvtn/src/Common/ListPost/Post/post.module.css
@@ -18,7 +18,7 @@
 
 .postImg {
     width: 100%;
-    /* max-width: 200px; */
+    max-height: 150px;
     margin-bottom: 10px;
 }
 
@@ -45,6 +45,11 @@
     font-family: sans-serif;
     margin-top: 4px;
 }
+.horizontalPost .moreInfo {
+    font-size: 14px;
+    position: absolute;
+    bottom: 8px;
+}
 .moreInfo {
     display: flex;
     align-items: center;
@@ -65,4 +70,83 @@
     content: '\B7';
     display: inline-block;
     vertical-align: middle;
+}
+.horizontalPost {
+    padding: 12px;
+    min-height: 124px;
+    overflow: hidden;
+    background-color: white;
+    border-top: 1px solid #f4f4f4;
+    margin: 1px 0;
+    position: relative;
+    display: flex;
+    transition: all 0.1s linear;
+    cursor: pointer;
+}
+.horizontalPost:hover {
+    box-shadow: 0 1px 8px 0 rgb(0 0 0 / 30%);
+    z-index: 1;
+}
+.deleteIcon {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-size: 20px;
+}
+.background {
+    width: 100px;
+    height: 100px;
+    object-fit: cover;
+}
+.postDetail {
+    margin-left: 12px;
+}
+.title {
+    font-size: 17px;
+    color: #222;
+    font-weight: 500;
+    margin-bottom: 10px;
+}
+.price {
+    color: #c90927;
+    font-size: 14px;
+    font-weight: 600;
+}
+
+.savePost {
+    position: absolute;
+    right: 30px;
+    bottom: 15px;
+    background: 0 0;
+    border: 2px solid #c90927;
+    border-radius: 20px;
+    color: #c90927;
+    cursor: pointer;
+    display: flex;
+    outline: 0;
+    padding: 5px 10px;
+    padding-right: 15px;
+    font-weight: 600;
+    transition: all 0.1s linear;
+}
+.savePost:hover {
+    background-color: #c90927;
+    color: #fff;
+}
+.savePost .icon {
+    position: relative;
+    color: #c90927;
+    top: 3px;
+    left: 6px;
+    font-weight: 700;
+}
+.savePost:hover .icon {
+    color: #fff;
+}
+.saved {
+    background-color: #c90927;
+    color: #fff;
+}
+.saved .icon {
+    color: #fff;
 }
