--- a/lvtn/src/Page/ProfileUser/profileuser.module.css
+++ b/lvtn/src/Page/ProfileUser/profileuser.module.css
@@ -7,7 +7,7 @@
     border-right: 1px solid #f0f0f0;
 }
 .icon {
-    font-size: 60px;
+    font-size: 80px;
     margin-right: 15px;
 }
 .name {
@@ -42,6 +42,7 @@
 .moreInfo {
     flex: 1 1 50%;
     padding-left: 15px;
+    position: relative;
 }
 .infoItem {
     white-space: nowrap;
@@ -56,4 +57,30 @@
 .infoItem > .label {
     color: #9b9b9b !important;
     margin-right: 8px;
+}
+.savePost {
+    position: absolute;
+    right: 20px;
+    bottom: 0;
+    background: 0 0;
+    border: 2px solid #c90927;
+    border-radius: 20px;
+    color: #c90927;
+    cursor: pointer;
+    outline: 0;
+    padding: 5px 10px;
+    padding-right: 15px;
+    font-weight: 600;
+    transition: all 0.1s linear;
+}
+.savePost.small {
+    font-size: 12px;
+}
+.savePost:hover {
+    background-color: #c90927;
+    color: #fff;
+}
+.avatar {
+    border-radius: 50%;
+    margin-right: 15px;
 }
