--- a/lvtn/src/Page/CreatePost/Components/categorypicker.module.css
+++ b/lvtn/src/Page/CreatePost/Components/categorypicker.module.css
@@ -68,6 +68,6 @@
     border: 1px solid #cacaca;
     border-bottom: none;
     border-radius: 5px;
-    height: 540px;
+    max-height: 540px;
     overflow: auto;
 }
