--- a/lvtn/src/Common/ListPost/Post/post.module.css
+++ b/lvtn/src/Common/ListPost/Post/post.module.css
@@ -83,6 +83,9 @@
     transition: all 0.1s linear;
     cursor: pointer;
 }
+.horizontalPost:first-child {
+    border: none;
+}
 .horizontalPost:hover {
     box-shadow: 0 1px 8px 0 rgb(0 0 0 / 30%);
     z-index: 1;
