--- a/lvtn/src/Page/CreatePost/createpost.module.css
+++ b/lvtn/src/Page/CreatePost/createpost.module.css
@@ -31,17 +31,19 @@
 .small {
     width: 80px;
     height: 80px;
-    margin-bottom: 20px;
+    margin: 0 15px 20px 15px;
 }
+
 .videoPicker {
     margin-top: 10px;
 }
 
 .previewImageContainer {
     display: flex;
-    justify-content: space-between;
     flex-wrap: wrap;
     margin-top: 20px;
+    margin-left: -15px;
+    margin-right: -15px;
 }
 .imageItem {
     position: relative;
