--- a/lvtn/src/Common/DynamicModal/DynamicModal.module.css
+++ b/lvtn/src/Common/DynamicModal/DynamicModal.module.css
@@ -42,6 +42,7 @@
     border-radius: 10px;
     min-width: 500px;
     position: relative;
+    max-width: 700px;
 }
 .title {
     font-family: sans-serif;
@@ -78,4 +79,7 @@
 }
 .button.solid {
     background-color: #ebf1ff;
+}
+.cancel {
+    color: #dc3545 !important;
 }
