--- a/lvtn/src/Common/DynamicModal/DynamicModal.module.css
+++ b/lvtn/src/Common/DynamicModal/DynamicModal.module.css
@@ -43,6 +43,7 @@
     min-width: 500px;
     position: relative;
     max-width: 700px;
+    z-index: 999999999999999999999999999999999999999999;
 }
 .title {
     font-family: sans-serif;
